# simplelink-lowpower-f2-sdk

./: meson.build
